Assets/Plugins/Pixel Crushers/Dialogue System/Scripts/Editor/Tools/Importers/Yarn3/ANTLR/generated_src/PixelCrushersYarnSpinnerParser.cs
#if USE_YARN3

//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from PixelCrushersYarnSpinnerParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace PixelCrushers.DialogueSystem.Yarn3 {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
//[System.CLSCompliant(false)]
public partial class PixelCrushersYarnSpinnerParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		INDENT=1, DEDENT=2, BLANK_LINE_FOLLOWING_OPTION=3, WS=4, COMMENT=5, NEWLINE=6, 
		HEADER_WHEN=7, HEADER_TITLE=8, ID=9, BODY_START=10, HEADER_DELIMITER=11, 
		HASHTAG=12, HEADER_WHEN_UNKNOWN=13, REST_OF_LINE=14, BODY_WS=15, BODY_END=16, 
		SHORTCUT_ARROW=17, LINE_GROUP_ARROW=18, COMMAND_START=19, EXPRESSION_START=20, 
		ESCAPED_ANY=21, TEXT_ESCAPE=22, TEXT_COMMENT=23, TEXT=24, UNESCAPABLE_CHARACTER=25, 
		TEXT_COMMANDHASHTAG_WS=26, TEXT_COMMANDHASHTAG_COMMENT=27, TEXT_COMMANDHASHTAG_ERROR=28, 
		HASHTAG_WS=29, HASHTAG_TEXT=30, EXPR_WS=31, EXPRESSION_WHEN_ALWAYS=32, 
		KEYWORD_TRUE=33, KEYWORD_FALSE=34, KEYWORD_NULL=35, NUMBER=36, OPERATOR_ASSIGNMENT=37, 
		OPERATOR_LOGICAL_LESS_THAN_EQUALS=38, OPERATOR_LOGICAL_GREATER_THAN_EQUALS=39, 
		OPERATOR_LOGICAL_EQUALS=40, OPERATOR_LOGICAL_LESS=41, OPERATOR_LOGICAL_GREATER=42, 
		OPERATOR_LOGICAL_NOT_EQUALS=43, OPERATOR_LOGICAL_AND=44, OPERATOR_LOGICAL_OR=45, 
		OPERATOR_LOGICAL_XOR=46, OPERATOR_LOGICAL_NOT=47, OPERATOR_MATHS_ADDITION_EQUALS=48, 
		OPERATOR_MATHS_SUBTRACTION_EQUALS=49, OPERATOR_MATHS_MULTIPLICATION_EQUALS=50, 
		OPERATOR_MATHS_MODULUS_EQUALS=51, OPERATOR_MATHS_DIVISION_EQUALS=52, OPERATOR_MATHS_ADDITION=53, 
		OPERATOR_MATHS_SUBTRACTION=54, OPERATOR_MATHS_MULTIPLICATION=55, OPERATOR_MATHS_DIVISION=56, 
		OPERATOR_MATHS_MODULUS=57, LPAREN=58, RPAREN=59, COMMA=60, EXPRESSION_AS=61, 
		STRING=62, FUNC_ID=63, EXPRESSION_END=64, VAR_ID=65, DOT=66, COMMAND_NEWLINE=67, 
		COMMAND_WS=68, COMMAND_IF=69, COMMAND_ELSEIF=70, COMMAND_ELSE=71, COMMAND_SET=72, 
		COMMAND_ENDIF=73, COMMAND_CALL=74, COMMAND_DECLARE=75, COMMAND_JUMP=76, 
		COMMAND_DETOUR=77, COMMAND_RETURN=78, COMMAND_ENUM=79, COMMAND_CASE=80, 
		COMMAND_ENDENUM=81, COMMAND_ONCE=82, COMMAND_ENDONCE=83, COMMAND_LOCAL=84, 
		COMMAND_END=85, COMMAND_TEXT_NEWLINE=86, COMMAND_TEXT=87, COMMAND_ID_WS=88, 
		COMMAND_ID_NEWLINE=89, COMMAND_ID_OR_EXPRESSION_WS=90, TYPE_STRING=91, 
		TYPE_NUMBER=92, TYPE_BOOL=93;
	public const int
		RULE_dialogue = 0, RULE_file_hashtag = 1, RULE_node = 2, RULE_title_header = 3, 
		RULE_when_header = 4, RULE_header = 5, RULE_header_when_expression = 6, 
		RULE_body = 7, RULE_statement = 8, RULE_line_statement = 9, RULE_line_formatted_text = 10, 
		RULE_hashtag = 11, RULE_line_condition = 12, RULE_expression = 13, RULE_value = 14, 
		RULE_variable = 15, RULE_function_call = 16, RULE_typeMemberReference = 17, 
		RULE_if_statement = 18, RULE_if_clause = 19, RULE_else_if_clause = 20, 
		RULE_else_clause = 21, RULE_set_statement = 22, RULE_call_statement = 23, 
		RULE_command_statement = 24, RULE_command_formatted_text = 25, RULE_shortcut_option_statement = 26, 
		RULE_shortcut_option = 27, RULE_line_group_statement = 28, RULE_line_group_item = 29, 
		RULE_declare_statement = 30, RULE_enum_statement = 31, RULE_enum_case_statement = 32, 
		RULE_jump_statement = 33, RULE_return_statement = 34, RULE_once_statement = 35, 
		RULE_once_primary_clause = 36, RULE_once_alternate_clause = 37, RULE_structured_command = 38, 
		RULE_structured_command_value = 39;
	public static readonly string[] ruleNames = {
		"dialogue", "file_hashtag", "node", "title_header", "when_header", "header", 
		"header_when_expression", "body", "statement", "line_statement", "line_formatted_text", 
		"hashtag", "line_condition", "expression", "value", "variable", "function_call", 
		"typeMemberReference", "if_statement", "if_clause", "else_if_clause", 
		"else_clause", "set_statement", "call_statement", "command_statement", 
		"command_formatted_text", "shortcut_option_statement", "shortcut_option", 
		"line_group_statement", "line_group_item", "declare_statement", "enum_statement", 
		"enum_case_statement", "jump_statement", "return_statement", "once_statement", 
		"once_primary_clause", "once_alternate_clause", "structured_command", 
		"structured_command_value"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, "'when'", "'title'", null, "'---'", 
		null, "'#'", null, null, null, "'==='", "'->'", "'=>'", "'<<'", null, 
		null, null, null, null, null, null, null, null, null, null, null, "'always'", 
		"'true'", "'false'", "'null'", null, null, null, null, null, null, null, 
		null, null, null, null, null, "'+='", "'-='", "'*='", "'%='", "'/='", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "','", "'as'", null, 
		null, "'}'", null, "'.'", null, null, null, null, "'else'", null, "'endif'", 
		null, null, null, null, "'return'", null, null, "'endenum'", "'once'", 
		"'endonce'", "'local'", null, null, null, null, null, null, "'string'", 
		"'number'", "'bool'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "INDENT", "DEDENT", "BLANK_LINE_FOLLOWING_OPTION", "WS", "COMMENT", 
		"NEWLINE", "HEADER_WHEN", "HEADER_TITLE", "ID", "BODY_START", "HEADER_DELIMITER", 
		"HASHTAG", "HEADER_WHEN_UNKNOWN", "REST_OF_LINE", "BODY_WS", "BODY_END", 
		"SHORTCUT_ARROW", "LINE_GROUP_ARROW", "COMMAND_START", "EXPRESSION_START", 
		"ESCAPED_ANY", "TEXT_ESCAPE", "TEXT_COMMENT", "TEXT", "UNESCAPABLE_CHARACTER", 
		"TEXT_COMMANDHASHTAG_WS", "TEXT_COMMANDHASHTAG_COMMENT", "TEXT_COMMANDHASHTAG_ERROR", 
		"HASHTAG_WS", "HASHTAG_TEXT", "EXPR_WS", "EXPRESSION_WHEN_ALWAYS", "KEYWORD_TRUE", 
		"KEYWORD_FALSE", "KEYWORD_NULL", "NUMBER", "OPERATOR_ASSIGNMENT", "OPERATOR_LOGICAL_LESS_THAN_EQUALS", 
		"OPERATOR_LOGICAL_GREATER_THAN_EQUALS", "OPERATOR_LOGICAL_EQUALS", "OPERATOR_LOGICAL_LESS", 
		"OPERATOR_LOGICAL_GREATER", "OPERATOR_LOGICAL_NOT_EQUALS", "OPERATOR_LOGICAL_AND", 
		"OPERATOR_LOGICAL_OR", "OPERATOR_LOGICAL_XOR", "OPERATOR_LOGICAL_NOT", 
		"OPERATOR_MATHS_ADDITION_EQUALS", "OPERATOR_MATHS_SUBTRACTION_EQUALS", 
		"OPERATOR_MATHS_MULTIPLICATION_EQUALS", "OPERATOR_MATHS_MODULUS_EQUALS", 
		"OPERATOR_MATHS_DIVISION_EQUALS", "OPERATOR_MATHS_ADDITION", "OPERATOR_MATHS_SUBTRACTION", 
		"OPERATOR_MATHS_MULTIPLICATION", "OPERATOR_MATHS_DIVISION", "OPERATOR_MATHS_MODULUS", 
		"LPAREN", "RPAREN", "COMMA", "EXPRESSION_AS", "STRING", "FUNC_ID", "EXPRESSION_END", 
		"VAR_ID", "DOT", "COMMAND_NEWLINE", "COMMAND_WS", "COMMAND_IF", "COMMAND_ELSEIF", 
		"COMMAND_ELSE", "COMMAND_SET", "COMMAND_ENDIF", "COMMAND_CALL", "COMMAND_DECLARE", 
		"COMMAND_JUMP", "COMMAND_DETOUR", "COMMAND_RETURN", "COMMAND_ENUM", "COMMAND_CASE", 
		"COMMAND_ENDENUM", "COMMAND_ONCE", "COMMAND_ENDONCE", "COMMAND_LOCAL", 
		"COMMAND_END", "COMMAND_TEXT_NEWLINE", "COMMAND_TEXT", "COMMAND_ID_WS", 
		"COMMAND_ID_NEWLINE", "COMMAND_ID_OR_EXPRESSION_WS", "TYPE_STRING", "TYPE_NUMBER", 
		"TYPE_BOOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PixelCrushersYarnSpinnerParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PixelCrushersYarnSpinnerParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PixelCrushersYarnSpinnerParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PixelCrushersYarnSpinnerParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DialogueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NodeContext[] node() {
			return GetRuleContexts<NodeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NodeContext node(int i) {
			return GetRuleContext<NodeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_hashtagContext[] file_hashtag() {
			return GetRuleContexts<File_hashtagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public File_hashtagContext file_hashtag(int i) {
			return GetRuleContext<File_hashtagContext>(i);
		}
		public DialogueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dialogue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterDialogue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitDialogue(this);
		}
	}

	[RuleVersion(0)]
	public DialogueContext dialogue() {
		DialogueContext _localctx = new DialogueContext(Context, State);
		EnterRule(_localctx, 0, RULE_dialogue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==HASHTAG) {
				{
				{
				State = 80;
				file_hashtag();
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 86;
				node();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 896L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class File_hashtagContext : ParserRuleContext {
		public IToken text;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASHTAG() { return GetToken(PixelCrushersYarnSpinnerParser.HASHTAG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASHTAG_TEXT() { return GetToken(PixelCrushersYarnSpinnerParser.HASHTAG_TEXT, 0); }
		public File_hashtagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file_hashtag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterFile_hashtag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitFile_hashtag(this);
		}
	}

	[RuleVersion(0)]
	public File_hashtagContext file_hashtag() {
		File_hashtagContext _localctx = new File_hashtagContext(Context, State);
		EnterRule(_localctx, 2, RULE_file_hashtag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91;
			Match(HASHTAG);
			State = 92;
			_localctx.text = Match(HASHTAG_TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NodeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_START() { return GetToken(PixelCrushersYarnSpinnerParser.BODY_START, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BODY_END() { return GetToken(PixelCrushersYarnSpinnerParser.BODY_END, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HeaderContext[] header() {
			return GetRuleContexts<HeaderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HeaderContext header(int i) {
			return GetRuleContext<HeaderContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public When_headerContext[] when_header() {
			return GetRuleContexts<When_headerContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public When_headerContext when_header(int i) {
			return GetRuleContext<When_headerContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Title_headerContext[] title_header() {
			return GetRuleContexts<Title_headerContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Title_headerContext title_header(int i) {
			return GetRuleContext<Title_headerContext>(i);
		}
		public NodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_node; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterNode(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitNode(this);
		}
	}

	[RuleVersion(0)]
	public NodeContext node() {
		NodeContext _localctx = new NodeContext(Context, State);
		EnterRule(_localctx, 4, RULE_node);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 97;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ID:
					{
					State = 94;
					header();
					}
					break;
				case HEADER_WHEN:
					{
					State = 95;
					when_header();
					}
					break;
				case HEADER_TITLE:
					{
					State = 96;
					title_header();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 99;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 896L) != 0) );
			State = 101;
			Match(BODY_START);
			State = 102;
			body();
			State = 103;
			Match(BODY_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Title_headerContext : ParserRuleContext {
		public IToken title;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER_TITLE() { return GetToken(PixelCrushersYarnSpinnerParser.HEADER_TITLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER_DELIMITER() { return GetToken(PixelCrushersYarnSpinnerParser.HEADER_DELIMITER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PixelCrushersYarnSpinnerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PixelCrushersYarnSpinnerParser.ID, 0); }
		public Title_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_title_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterTitle_header(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitTitle_header(this);
		}
	}

	[RuleVersion(0)]
	public Title_headerContext title_header() {
		Title_headerContext _localctx = new Title_headerContext(Context, State);
		EnterRule(_localctx, 6, RULE_title_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105;
			Match(HEADER_TITLE);
			State = 106;
			Match(HEADER_DELIMITER);
			State = 107;
			_localctx.title = Match(ID);
			State = 108;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class When_headerContext : ParserRuleContext {
		public Header_when_expressionContext header_expression;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER_WHEN() { return GetToken(PixelCrushersYarnSpinnerParser.HEADER_WHEN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER_DELIMITER() { return GetToken(PixelCrushersYarnSpinnerParser.HEADER_DELIMITER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE() { return GetToken(PixelCrushersYarnSpinnerParser.NEWLINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Header_when_expressionContext header_when_expression() {
			return GetRuleContext<Header_when_expressionContext>(0);
		}
		public When_headerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_when_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterWhen_header(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitWhen_header(this);
		}
	}

	[RuleVersion(0)]
	public When_headerContext when_header() {
		When_headerContext _localctx = new When_headerContext(Context, State);
		EnterRule(_localctx, 8, RULE_when_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(HEADER_WHEN);
			State = 111;
			Match(HEADER_DELIMITER);
			State = 112;
			_localctx.header_expression = header_when_expression();
			State = 113;
			Match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		public IToken header_key;
		public IToken header_value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER_DELIMITER() { return GetToken(PixelCrushersYarnSpinnerParser.HEADER_DELIMITER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PixelCrushersYarnSpinnerParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REST_OF_LINE() { return GetToken(PixelCrushersYarnSpinnerParser.REST_OF_LINE, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPixelCrushersYarnSpinnerParserListener typedListener = listener as IPixelCrushersYarnSpinnerParserListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(Context, State);
		EnterRule(_localctx, 10, RULE_header);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			_localctx.header_key = Match(ID);
			State = 116;
			Match(HEADER_DELIMITER);
			State = 118;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==REST_OF_LINE) {
				{
				State = 117;
				_localctx.header_value = Match(REST_OF_LINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Header_when_expressionContext : ParserRuleContext {
		public IToken always;
		public IToken once;
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXPRESSION_WHEN_ALWAYS() { return GetToken(PixelCrushersYarnSpinnerParser.EXPRESSION_WHEN_ALWAYS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMAND_ONCE() { return GetToken(PixelCrushersYarnSpinnerParser.COMMAND_ONCE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMAND_IF() { return GetToken(PixelCrushersYarnSpinnerParser.COMMAND_IF, 0); }
		public Header_when_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header_when_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
